fix scan screen && makefile && upd .gitignore
